src/home/styling/home.scss
// MOBILE
@media (max-width: 900px) {
  :root {
    --body-grid: 1fr/ 1fr;
  }

  .side-column {
    display: none;
  }
  .post-column {
    justify-self: center;
    width: 100%;
  }
}

// DESKTOP / TABLET
@media (min-width: 900px) {
  :root {
    --body-grid: 1fr / 2fr 1fr;
  }
}

#home-main {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--bg);
  min-height: 92dvh;
  padding-top: 1.5rem;
}

.body-section {
  width: clamp(50%, 900px, 95%);
  display: grid;
  grid: var(--body-grid);
  gap: 1.5rem;

  > .post-column {
    grid-column: 1/2;
    display: flex;
    gap: 1.5rem;
    align-items: center;
    flex-direction: column;
    max-width: 655px;
  }

  .sort-selector {
    display: flex;
    gap: 0.5rem;
    justify-content: center;
    > li {
      list-style: none;
      padding: 0.25rem 0.5rem;
      border-radius: 5rem;
      opacity: 30%;
      display: flex;
      align-items: center;
      gap: 0.25rem;

      &:hover,
      &:focus {
        background-color: var(--bg);
      }
      &.selected {
        opacity: 100%;
        background-color: var(--bg);
      }
    }
  }

  > .side-column {
    .side-info {
      display: flex;
      flex-direction: column;
      gap: 0.5rem;
      align-items: center;
      font-size: 0.9rem;

      > * {
        width: 100%;
      }
      > p {
        border-bottom: 1px solid var(--bg);
        padding-bottom: 1rem;
        margin-bottom: 0.5rem;
      }
      > h2 {
        padding: 0.5rem 0;
        font-size: 1.2rem;
      }
    }
  }
}

